--- a/src/CalculatorView.form
+++ b/src/CalculatorView.form
@@ -11,6 +11,7 @@
         <constraints border-constraint="North"/>
         <properties>
           <columns value="1"/>
+          <font name="Roboto" size="14" style="1"/>
         </properties>
       </component>
       <grid id="f3391" binding="panelButtonHolder" layout-manager="GridBagLayout">
@@ -18,18 +19,9 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="632f0" class="javax.swing.JButton" binding="buttonPercent">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-              <gridbag weightx="0.0" weighty="0.0"/>
-            </constraints>
-            <properties>
-              <text value="%"/>
-            </properties>
-          </component>
           <component id="ab070" class="javax.swing.JButton" binding="buttonClearScreen">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
               <gridbag weightx="0.0" weighty="0.0"/>
             </constraints>
             <properties>
@@ -189,7 +181,7 @@
               <text value="+"/>
             </properties>
           </component>
-          <component id="7ed3e" class="javax.swing.JButton" binding="buttonNegative">
+          <component id="7ed3e" class="javax.swing.JButton" binding="buttonNegate">
             <constraints>
               <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
               <gridbag weightx="0.0" weighty="0.0"/>
